--- a/pom.xml
+++ b/pom.xml
@@ -14,11 +14,17 @@
 	<artifactId>assignment</artifactId>
 	<version>0.0.1-SNAPSHOT</version>
 	<name>assignment</name>
-	<description>Demo project for Spring Boot</description>
+	<description>Project for Noroff, Assignment 2 Java</description>
 	<properties>
 		<java.version>16</java.version>
 	</properties>
+
 	<dependencies>
+		<dependency>
+			<groupId>org.springframework.boot</groupId>
+			<artifactId>spring-boot-starter-thymeleaf</artifactId>
+		</dependency>
+
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-starter-web</artifactId>
@@ -29,6 +35,17 @@
 			<artifactId>spring-boot-starter-test</artifactId>
 			<scope>test</scope>
 		</dependency>
+
+
+		<!-- https://mvnrepository.com/artifact/org.xerial/sqlite-jdbc -->
+		<dependency>
+			<groupId>org.xerial</groupId>
+			<artifactId>sqlite-jdbc</artifactId>
+			<version>3.36.0.3</version>
+		</dependency>
+
+
+
 	</dependencies>
 
 	<build>
@@ -47,5 +64,8 @@
             </plugin>
         </plugins>
 	</build>
+
+
+
 
 </project>
